Fixed the CSS that made <code> words too big in the book chapter.

--- a/_css/_normalize.scss
+++ b/_css/_normalize.scss
@@ -207,7 +207,6 @@ pre {
  */
 
 pre,
-code,
 kbd,
 samp {
     font-family: monospace, serif;
